had to change relative path to gitignore screenshots

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ public
 resources
 
 # Things I have added myself
-tests/ux/*.png
+**/**/*.png
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
